--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '1.0'
 services:
   env_detector:
-    image: maratsher/env-detector:latest
+    image: maratsher/env-detector:ubuntu6
     restart: unless-stopped
     command: bash -c "mkdir -p ed_logs && python3 -m env_detector"
     environment:
@@ -15,9 +15,11 @@ services:
       - FRAMES_PER_SECOND=20
     volumes:
       - ./ed_logs:/app/ed_logs
-    deploy:
-      resources:
-        reservations:
-          devices:
-          - driver: nvidia
-            capabilities: [gpu, utility]
+      - /tmp:/tmp
+
+    # deploy:
+    #   resources:
+    #     reservations:
+    #       devices:
+    #       - driver: nvidia
+    #         capabilities: [gpu, utility]
