--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-scikit-image
+# scikit-image
 opencv-python==3.4.18.65
 pydantic==1.9.2
 Flask==2.0.3
 flask-restx==0.5.1
-pika
 requests
 apscheduler
